<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Minigridstories</string>
    <string name="title_activity_amain">AMain</string>
    <string name="title_activity_acarousel">Title</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="finish">Finish</string>
    <string name="skip">Skip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="your_name">Your Name</string>
    <string name="done">Done</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="your_phone_number">your phone number</string>
    <string name="verification_code_sent_to_your_phone_number">Verification Code Sent to your phone number</string>
    <string name="resend">Resend</string>
    <string name="signup_code_header">Enter your code of your regional solar energy admin</string>
    <string name="help_with_code">help with code?</string>
    <string name="title_learn">Learn</string>
    <string name="title_community">Watch</string>
    <string name="title_make">Make</string>
    <string name="title_library">My Videos</string>
    <string name="tab_title_current_projects">Current Projects</string>
    <string name="tab_title_finished_projects">Finished Projects</string>
    <string name="new_movie_button_text">Make new Film</string>
    <string name="themes_for_solar_grid_customers">Themes for Solar Grid Customers</string>
    <string name="themes_for_solar_grid_employees">Themes for Solar Grid Employees</string>
    <string name="f_movie_list_info">Choose the topic for your Film</string>
    <string name="next">next</string>
    <string name="_continue">Continue</string>
    <string name="example_video">Example Video</string>
    <string name="starting_playback">Starting Playback</string>
    <string name="title_activity_aoverview">AOverview</string>
    <string name="save">Save</string>
    <string name="re_record">Re Record</string>
    <string name="start_audio_recording">start</string>
    <string name="batao">Tell</string>
    <string name="hold_your_phone_closer">When recording, keep your phone close to your mouth</string>
    <string name="stop_audio_recording">stop</string>
    <string name="audio_play">play</string>
    <string name="resume">resume</string>
    <string name="pause">pause</string>
    <string name="no_finished_projects">No finished projects</string>
    <string name="no_on_going_projects">no ongoing projects</string>
    <string name="edit">edit</string>
    <string name="delete_all_clips">delete all</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="make_movie">Make Film</string>
    <string name="confirm_delete_dialog_header">Confirm Delete?</string>
    <string name="delete_clip_message">This clip will be deleted</string>
    <string name="all_clips_delete_message">All clips will be deleted</string>
    <string name="scene">Scene</string>
    <string name="dikhao">Show</string>
    <string name="sunao">Tell</string>
    <string name="scenes_over">Scenes Complete</string>
    <string name="watch_your_film">Watch your Film</string>
    <string name="all_done">All Done!</string>
    <string name="tab_title_local_movies">Films On Phone</string>
    <string name="tab_title_remote_movies">Published Films</string>
    <string name="no_local_movies">Your Films will show up here</string>
    <string name="publish">Publish Film</string>
    <string name="confirm_movie_delete_dialog_title">Confirm Delete Film?</string>
    <string name="name_your_film">Name Your Film</string>
    <string name="jaise">Like</string>
    <string name="no_published_movies">You have not published a Film yet.</string>
    <string name="scenes_completed">Completed</string>
    <string name="keep_going">Keep going!</string>
    <string name="start_this_one">Start this one!</string>
    <string name="almost_done">You are almost done!</string>
    <string name="lets_setup_your_profile">Let’s set up your profile!</string>
    <string name="start">start</string>
    <string name="enter_your_company">Which company\'s connection do you have?</string>
    <string name="enter_your_state">What state do you live in?</string>
    <string name="enter_your_district">What district are you from?</string>
    <string name="profile_complete">Your profile is now ready!</string>
    <string name="ok">Okay!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cam_overlay_dikhao_intro_text">This will record only video – don\'t speak!</string>
    <string name="nai_samja">View Tutorial Film</string>
    <string name="congratulations">Congratulations</string>
    <string name="first_clip_congo_text">You just finished your first shot! Move ahead and see what\'s next!</string>
    <string name="waych_prev_clip">Watch Previous Clip</string>
    <string name="you_can_record_this_again">You can record this again</string>
    <string name="first_scene_congo_text">You finished your first Scene!</string>
    <string name="overview_overlay_desc_text">Tap this button to see an overview of your project</string>
    <string name="theme_select_overlay_text">Choose a theme for your Film</string>
    <string name="a_scene_intro_text">Here you can edit any clip in the scene</string>
    <string name="cam_overlay_batao_intro_text">Introduce yourself with a selfie video</string>
    <string name="audio_rec_intro_text">Answer the questions shown in each audio clip</string>
    <string name="dikhao_complete_congo_text">You just recorded all clips in Show!</string>
    <string name="all_finish_congo_text">You finished recording everything!</string>
    <string name="making_movie">Making your Film…</string>
    <string name="awating_approval">Publishing in progress</string>
    <string name="see_why">see why</string>
    <string name="which_film_you_will_make_today">Which Film will you make today?</string>
    <string name="tap_on_this_button_if_you_need_help">Tap on this button if you need help</string>
    <string name="learn_intro_overlay_text">Watch the videos in this section to learn the basic techniques of filmmaking
        and how to use the app
    </string>
    <string name="community_intro_overlay_text">Here you will be able to watch videos made by others in the Minigrid stories
        community
    </string>
    <string name="make_intro_overlay_text">Your current and completed projects will appear here</string>
    <string name="library_intro_overlay_text">All the Films you have made will live here</string>
    <string name="press_this_button_to_make_a_new_film">Press this button to make a new Film</string>
    <string name="tap_this_button_to_continue_this_project">Tap this button to continue this project</string>
    <string name="tap_this_button_to_complete_your_edited_project">Tap this button to complete your edited project
    </string>
    <string name="here_you_can_edit_any_clip_in_the_scene">Here you can edit any clip in the scene</string>
    <string name="tap_on_this_button_to_edit_a_scene">Tap on this button to edit a scene</string>
    <string name="enter_new_project_name">Enter New Project Name</string>
    <string name="exit_app">Exit App?</string>
    <string name="confirm_delete_project">Confirm Delete Project?</string>
    <string name="project_delete_confirm_desc">Everything in the project will be deleted. You will still have your Films
        in Video Library
    </string>
    <string name="dikhao_tutorial_title">Show Tutorial Video</string>
    <string name="selfie_tutorial_title">Selfie Tutorial Video</string>
    <string name="audio_tutorial_title">Audio Tutorial Video</string>
    <string name="editing_tutorial_title">Editing Tutorial Video</string>
    <string name="upload_happening">Uploading Film</string>
    <string name="overview_title">App Video</string>
    <string name="loading_films">Loading Films</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="try_again">try again</string>
    <string name="publish_tutorial_title">Publishing Tutorial Video</string>
    <string name="film_unpublished">Your film has been unpublished</string>
    <string name="view_on_website">view on website</string>
    <string name="app_language">eng</string>
    <string name="select_app_language">Select Language</string>
    <string name="restart_to_apply_changes">Restart the app to apply the changes</string>
    <string name="scenes">Scenes</string>
    <string name="title_new_movie">New Film</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="name_too_long">Name too long</string>
    <string name="wait_a_sec">Wait a second</string>
    <string name="movie_name_cannot_be_empty">Movie Name cannot be empty</string>
    <string name="invalid_movie_name">Invalid Movie Name</string>
    <string name="phone_no_cannot_be_empty">Phone Number cannot be empty</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="incomplete_profile_title">Incomplete Profile</string>
    <string name="incomplete_profile_dialog_message">Complete your profile to upload your video</string>
</resources>
