<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.qs.minigridv5.activities.ANameMovie">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
    >

        <LinearLayout
                android:id="@+id/a_name_movie_skip_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="top|start"
        >

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close_white_24dp"
                    android:tint="@color/gray"
                    android:layout_gravity="center_vertical"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skip"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
            />

        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_your_film"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="96dp"
                android:textSize="24sp"
                android:textStyle="bold"
        />

        <EditText
                android:id="@+id/a_name_movie_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="172dp"
                android:inputType="text"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jaise"
                android:layout_gravity="top|start"
                android:layout_marginTop="246dp"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
        />

        <TextView
                android:id="@+id/a_name_movie_suggestions_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jaise"
                android:layout_gravity="top|start"
                android:layout_marginTop="286dp"
                android:textSize="18sp"
                android:textColor="@color/gray"
        />

        <Button
                android:id="@+id/a_name_movie_next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:gravity="center"
                style="@style/MyButton"
                android:text="@string/_continue"
        />

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
