<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="16dp"
             tools:context="com.qs.minigridv5.fragments.signup.FSignupIntro">

    <LinearLayout
            android:id="@+id/f_signup_skip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="top|start"
    >

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_white_24dp"
                android:tint="@color/gray"
                android:layout_gravity="center_vertical"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
        />

    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/5"
            android:layout_gravity="top|end"
            android:textSize="18sp"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lets_setup_your_profile"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="96dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
    />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/illustration_profile_set_up"
            android:layout_gravity="center"
    />


    <Button
            android:id="@+id/f_signup_intro_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:gravity="center"
            style="@style/MyButton"
            android:text="@string/start"
    />

</FrameLayout>
