<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="false"
             tools:context="com.qs.minigridv5.fragments.signup.FSignupName">

    <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="8dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/cam_progress_bar"
            android:progress="1"
            android:max="5"
    />
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_marginTop="12dp"
    >


        <LinearLayout
                android:id="@+id/f_signup_skip_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="top|start"
        >

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close_white_24dp"
                    android:tint="@color/gray"
                    android:layout_gravity="center_vertical"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skip"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
            />

        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/5"
                android:layout_gravity="top|end"
                android:textSize="18sp"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_name"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="56dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/dark_gray"
        />

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/f_signup_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="132dp"
                android:inputType="text"/>

        <Button
                android:id="@+id/f_signup_name_next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:gravity="center"
                style="@style/MyButton"
                android:text="@string/_continue"
        />

    </FrameLayout>

</FrameLayout>
