<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.qs.minigridv5.activities.ASceneEdit">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/a_scene_edit_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_close_white_24dp"
                        android:padding="16dp"
                        android:layout_gravity="start|center_vertical"

                />

                <TextView
                        android:id="@+id/a_scene_edit_scene_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="category name"
                        android:layout_gravity="center"
                        android:textSize="22sp"
                        android:textColor="@color/white"
                />

                <ImageView
                        android:id="@+id/a_scene_edit_help"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_help_outline_white_24dp"
                        android:padding="16dp"
                        android:layout_gravity="end|center_vertical"
                />

            </FrameLayout>

            <com.yarolegovich.discretescrollview.DiscreteScrollView
                    android:id="@+id/a_scene_edit_clips_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:clipToPadding="false"
                    android:scrollbars="none"
            />

        </LinearLayout>

        <ImageView
                android:id="@+id/a_scene_edit_next_clip_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/round_button_translu_black"
                android:src="@drawable/ic_chevron_right_white_24dp"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="16dp"
        />

        <ImageView
                android:id="@+id/a_scene_edit_prev_clip_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/round_button_translu_black"
                android:src="@drawable/ic_chevron_left_white_24dp"
                android:layout_gravity="center_vertical|start"
                android:layout_margin="16dp"
        />

        <Button
                android:id="@+id/a_scene_edit_re_record_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="56dp"
                android:drawableEnd="@drawable/ic_autorenew_white_24dp"
                style="@style/MyNegativeButton"
                android:text="@string/re_record"/>

        <Button
                android:id="@+id/a_scene_edit_delete_all_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_delete_white_24dp"
                android:text="@string/delete_all_clips"
                style="@style/MyWireButton"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
        />

        <android.support.v7.widget.RecyclerView
                android:id="@+id/a_scene_edit_dots_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="56dp"
        />

    </FrameLayout>

    <!--overlays-->
    <FrameLayout android:id="@+id/a_scene_edit_intro_overlay"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/translu_dark_gray"
                 android:clickable="true"
                 android:visibility="gone">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:orientation="vertical"
                    android:background="@drawable/rect_button_white">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:text="@string/edit"
                        android:textColor="@color/colorPrimaryLight"
                        android:layout_marginBottom="12dp"
                        android:layout_gravity="start"/>

                <TextView
                        android:layout_width="196dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/a_scene_intro_text"
                        android:textColor="@color/gray"
                        android:layout_gravity="start"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/a_cam_intro_okay_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/ok"
                            android:textColor="@color/colorPrimaryLight"
                            android:padding="12dp"
                            android:layout_gravity="start"/>

                    <TextView
                            android:id="@+id/a_scene_edit_nai_samja_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/nai_samja"
                            android:textColor="@color/colorPrimaryLight"
                            android:padding="12dp"
                            android:layout_gravity="end"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

</FrameLayout>
